resolved undefined references in parsing library

--- a/lib/dimension_reductions/CMakeLists.txt
+++ b/lib/dimension_reductions/CMakeLists.txt
@@ -4,7 +4,7 @@ project(my_dimension_reductions)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library( ${PROJECT_NAME} naive_pla.cpp paa.cpp)
+add_library( ${PROJECT_NAME} pla.cpp paa.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
 
 
