--- a/lib/cleaning/CMakeLists.txt
+++ b/lib/cleaning/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.26)
 
-project(my_similarity_search)
+project(my_cleaning)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library( ${PROJECT_NAME} sequential_scan.cpp mse.cpp)
+add_library( ${PROJECT_NAME} z_norm.cpp)
+
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
 
 
