--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ set(CMAKE_CXX_VERSION 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_executable(${PROJECT_NAME} src/main.cpp
-			       src/plotting/series_plotting.cpp)
+			       src/plotting/series_plotting.cpp
+			       src/plotting/plot_types.cpp)
 
 add_subdirectory(lib/sequence_gen)
 add_subdirectory(lib/parsing)
