half way through creating r tree

--- a/lib/similarity_search/CMakeLists.txt
+++ b/lib/similarity_search/CMakeLists.txt
@@ -7,5 +7,5 @@ set(CMAKE_CXX_STANDARD 17)
 add_library( ${PROJECT_NAME} sequential_scan.cpp mse.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
 
-
-
+include_directories("../dimension_reductions")
+target_link_libraries(${PROJECT_NAME} PUBLIC my_dimension_reductions)
