--- a/lib/similarity_search/CMakeLists.txt
+++ b/lib/similarity_search/CMakeLists.txt
@@ -4,7 +4,7 @@ project(my_similarity_search)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library( ${PROJECT_NAME} sequential_scan.cpp mse.cpp)
+add_library( ${PROJECT_NAME} sequential_scan.cpp lower_bounds.cpp error_measures.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
 
 include_directories("../dimension_reductions")
